# drought_monitoring

./: .gitignore  README.md  main.py  pyproject.toml  spatial.py
drought_monitoring/: __init__.py  core.py  forecast.py  gee.py  io.py  mcp_server.py  plot.py  spatial.py
tests/: test_core.py
workshop/: drought_monitoring_TUK_workshop.ipynb  pyproject.toml
