[project]
name = "drought-monitoring"
version = "0.1.0"
description = "Composite Drought Index via GEE + COG output + climate-science plots"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "geoges" },
]
keywords = ["drought", "CDI", "google-earth-engine", "xarray", "remote-sensing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "dask>=2024.8.0",
    "leafmap>=0.61.1",
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.13.1",
    "xarray>=0.19",
    "xee>=0.0.22",
]

[project.urls]
Homepage = "https://github.com/geoges/drought-monitoring"
"Bug Tracker" = "https://github.com/geoges/drought-monitoring/issues"

[project.optional-dependencies]
gee     = ["earthengine-api>=0.1.370"]
cog     = ["rasterio>=1.2", "rioxarray>=0.9"]
plot    = ["matplotlib>=3.5"]
all     = ["earthengine-api>=0.1.370","rasterio>=1.2","rioxarray>=0.9","matplotlib>=3.5"]
dev     = ["pytest>=7","pytest-cov","matplotlib>=3.5","rasterio>=1.2","rioxarray>=0.9"]

[tool.setuptools.packages.find]
include = ["drought_monitoring*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["drought_monitoring/tests"]
